# MoreYZ

./: .gitignore  LICENSE  README.md
MoreYZ/: MoreYZ.lua  MoreYZ.toc
moreyz-overlay/: index.html  package.json  pnpm-lock.yaml
moreyz-overlay/src/: App.css  App.tsx
moreyz-overlay/src-tauri/: Cargo.toml  tauri.conf.json
moreyz-overlay/src-tauri/capabilities/: default.json
moreyz-overlay/src-tauri/src/: lib.rs  main.rs
moreyz-overlay/src/components/: Overlay.css  Overlay.tsx  Settings.css  Settings.tsx
