[package]
name = "moreyz-overlay"
version = "0.1.0"
description = "WoW Combat Log Overlay Analyzer"
authors = ["you"]
edition = "2021"

[lib]
name = "moreyz_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
regex = "1"
encoding_rs = "0.8"

